# openapi.json
@@ -8,12 +8,12 @@
         {
           "url": "https://santrixticket-1.1b7hlo69yoj4.eu-de.codeengine.appdomain.cloud"
         }
-    ],   
+    ],
     "paths": {
-        "/create_ticket_mail/{request}": {
+        "/create_ticket_mail": {
             "post": {
                 "summary": "Send Email",
-                "operationId": "send_email_create_ticket_mail__request__post",
+                "operationId": "send_email_create_ticket_mail_post",
                 "requestBody": {
                     "content": {
                         "application/json": {
